2007-05-23  John W. Eaton  <jwe@octave.org>

	* oct-sparse.h: Don't surround included files with extern "C" { ... }.

2007-05-16  David Bateman  <dbateman@free.fr>

	* dRowVector.cc (linspace): Return second argument if fewer than
	two values are requested.
	* CRowVector.cc (linspace): Likewise.

2007-04-27  John W. Eaton  <jwe@octave.org>

	* lo-mappers.cc (signum (const Complex&)): Special case for (0, 0).

2007-04-25  John W. Eaton  <jwe@octave.org>

	* oct-fftw.h (octave_fftw): Tag with OCTAVE_API.

2007-04-20  John W. Eaton  <jwe@octave.org>

	* Array.cc (assign1): For x(:) = RHS, require rhs_len == lhs_len,
	not rhs_len == 1.

2007-04-18  Michael Goffioul  <michael.goffioul@swing.be>

	* oct-md5.h (oct_md5, oct_md5_file): Tag decls with OCTAVE_API.

2007-04-13  John W. Eaton  <jwe@octave.org>

	* Array.cc (Array<T>::maybe_delete_elements_2): Don't return early
	for empty matrix.  Only check for colon index equivalence if not empty.

2007-04-10  John W. Eaton  <jwe@octave.org>

	* SparseCmplxQR.cc
	(SparseComplexQR::SparseComplexQR_rep::SparseComplexQR_rep):
	Move GCC_ATTR_UNUSED before the parameter decl.
	From Luis Ortiz  <lortiz@interactivesupercomputing.com>.

2007-04-06  John W. Eaton  <jwe@octave.org>

	* MArray-defs.h (MARRAY_NORM_BODY): New macro.
	* MArray.h (MArray<T>::norm): New function.
	* MArray.cc: Provide decl.
	* MArray-d.cc (MArray<double>::norm): Define double specialization.
	* MArray-C.cc (MArray<Complex>::norm): Define Complex specialization.

2007-04-04  John W. Eaton  <jwe@octave.org>

	* Range.cc (Range::nelem_internal): Likewise.
	* lo-utils.cc (NINT): Use numeric_limits<int> instead of INT_MAX.
	(NINTbig): Use numeric_limits<octave_idx_type> instead of INT_MAX.
	From Scott Pakin <pakin@lanl.gov>.

2007-04-04  David Bateman  <dbateman@free.fr>

	* dMatrix.cc (Matrix::inverse): If calc_cond is true, calculate
	the condition number for positive definite matrices.
	* CMatrix.cc (ComplexMatrix::inverse): Ditto.